[gd_scene load_steps=22 format=3 uid="uid://dij0tvr20bhkw"]

[ext_resource type="Script" path="res://entities/projectiles/projectiles_scripts/scatter_projectile.gd" id="1_gqjwj"]
[ext_resource type="AudioStream" uid="uid://b6m2my37txxgb" path="res://assets/audio/effects/laser_tweaking.wav" id="2_t8bmh"]
[ext_resource type="Material" uid="uid://3pokl82cbjx1" path="res://assets/shaders/player_projectile_outline.tres" id="3_64t5a"]
[ext_resource type="Texture2D" uid="uid://ukbs4oty6hxw" path="res://assets/textures/projectiles/scatter_bullet_decay.png" id="3_elkm3"]
[ext_resource type="Texture2D" uid="uid://py7f06uskx2x" path="res://assets/textures/projectiles/scatter_bullet_decayed.png" id="3_wj13v"]
[ext_resource type="PackedScene" uid="uid://c3atqdge540t0" path="res://components/status/hitbox_component.tscn" id="4_bvv4x"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xjcwl"]
atlas = ExtResource("3_wj13v")
region = Rect2(36, 0, 12, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_riuvn"]
atlas = ExtResource("3_wj13v")
region = Rect2(24, 0, 12, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_2mvfo"]
atlas = ExtResource("3_wj13v")
region = Rect2(12, 0, 12, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_uouga"]
atlas = ExtResource("3_wj13v")
region = Rect2(0, 0, 12, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_bke81"]
atlas = ExtResource("3_elkm3")
region = Rect2(84, 0, 12, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ncfa"]
atlas = ExtResource("3_elkm3")
region = Rect2(72, 0, 12, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_2lcwy"]
atlas = ExtResource("3_elkm3")
region = Rect2(60, 0, 12, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_hieqx"]
atlas = ExtResource("3_elkm3")
region = Rect2(48, 0, 12, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_hd8t4"]
atlas = ExtResource("3_elkm3")
region = Rect2(36, 0, 12, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_7asuy"]
atlas = ExtResource("3_elkm3")
region = Rect2(24, 0, 12, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_ind2j"]
atlas = ExtResource("3_elkm3")
region = Rect2(12, 0, 12, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_luxot"]
atlas = ExtResource("3_elkm3")
region = Rect2(0, 0, 12, 18)

[sub_resource type="SpriteFrames" id="SpriteFrames_xo1gm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xjcwl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_riuvn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2mvfo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uouga")
}],
"loop": true,
"name": &"decayed_bullet",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bke81")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ncfa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2lcwy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hieqx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hd8t4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7asuy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ind2j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_luxot")
}],
"loop": false,
"name": &"scatter_projectile",
"speed": 20.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jewc2"]
radius = 6.0
height = 18.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kcd5f"]
radius = 6.0
height = 18.0

[node name="ScatterBullet" type="Area2D" groups=["player_projectile"]]
modulate = Color(30, 30, 30, 1)
top_level = true
light_mask = 2
collision_layer = 4
collision_mask = 2
script = ExtResource("1_gqjwj")
base_projectile_speed = 450
max_distance = 300
penetration_factor = 0.5
metadata/_edit_horizontal_guides_ = [-2.0, 2.0]
metadata/_edit_vertical_guides_ = [-6.0, 6.0]

[node name="ProjectileSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_t8bmh")

[node name="ScatterAnimations" type="AnimatedSprite2D" parent="."]
material = ExtResource("3_64t5a")
rotation = 1.5708
sprite_frames = SubResource("SpriteFrames_xo1gm")
animation = &"scatter_projectile"
autoplay = "scatter_projectile"
frame = 7
frame_progress = 1.0

[node name="SelfHitbox" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_jewc2")
disabled = true

[node name="OutsideScreenCheck" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-96, 0)
scale = Vector2(0.5, 0.5)

[node name="HitboxComponent" parent="." instance=ExtResource("4_bvv4x")]
collision_layer = 4
collision_mask = 2

[node name="SelfProjectileBox" type="CollisionShape2D" parent="HitboxComponent"]
visible = false
rotation = -1.5708
shape = SubResource("CapsuleShape2D_kcd5f")

[connection signal="screen_exited" from="OutsideScreenCheck" to="." method="_on_outside_screen_check_exit_detected"]
[connection signal="area_entered" from="HitboxComponent" to="." method="_on_hitbox_area_entered"]
